# gigswift

./: .dockerignore  .env.example  .gitignore  Dockerfile  GIGSWIFT_DESIGN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  manual-deploy.yml
alembic/: env.py
alembic/versions/: 20260618_0225_ac084b97e6c1_initial_schema.py
app/: __init__.py  main.py  scheduler.py
app/api/: __init__.py  admin.py  health.py
app/core/: __init__.py  config.py  database.py  logging.py
app/formatter/: __init__.py  base.py  image.py  linkedin_formatter.py  telegram_formatter.py  x_formatter.py
app/ingest/: __init__.py  base.py  registry.py  rss.py  telegram.py
app/models/: __init__.py  base.py  job.py  post.py  publish_log.py  run_log.py
app/pipeline/: __init__.py  dedup.py  filter.py  runner.py  scorer.py
app/publisher/: __init__.py  base.py  linkedin_publisher.py  telegram_publisher.py  x_publisher.py
app/schemas/: __init__.py  job.py  post.py  publish_log.py  run_log.py
tests/: conftest.py  test_api.py  test_formatter.py  test_ingest.py  test_pipeline.py  test_publishers.py
