[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigswift-agent"
version = "0.1.0"
description = "Ingests remote job/gig listings, scores them, and broadcasts branded posts to X and Telegram."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GigSwift" }]
keywords = ["jobs", "automation", "telegram", "twitter", "rss", "fastapi"]

# Production dependencies. Mirrors the tech stack in GIGSWIFT_DESIGN.md section 4,
# plus the adjuncts those choices imply (ASGI server, async DB driver, pydantic-settings).
dependencies = [
    # Web framework + ASGI server (Dockerfile runs `uvicorn app.main:app`)
    "fastapi==0.111.0",
    "uvicorn[standard]>=0.30,<0.31",
    # Scheduler — runs inside the app container, no extra infra
    "APScheduler>=3.10,<4.0",
    # ORM (async) + async PostgreSQL driver + migrations
    "SQLAlchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2.0",
    # Config — Pydantic v2 BaseSettings now lives in pydantic-settings
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # Ingestion
    "feedparser>=6.0,<7.0",
    "Telethon>=1.36,<2.0",
    # Publishing ([async] pulls aiohttp/async_lru/oauthlib for tweepy.AsyncClient)
    "tweepy[async]>=4.14,<5.0",
    "python-telegram-bot>=21.0,<22.0",
    # Image generation — branded Pillow cards, no external API
    "Pillow>=10.3,<11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<0.28",
    "aiosqlite>=0.20,<0.21",
]

# ---------------------------------------------------------------------------
# Packaging
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
# conftest sets required env vars before importing app modules (E402), which also
# splits the import block in a way isort cannot reconcile (I001).
"tests/conftest.py" = ["E402", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
